2010-11-23  Justin Davis  <juster@artemis.juster.info>

	* RELEASE (1.07)

	* lib/CPANPLUS/Dist/Arch.pm (_translate_cpan_deps): Return
	perl-test- packages as 'makedepends' unless we are ourselves
	a perl-test- package. This updates templates as well.
	(_translate_cpan_deps): We also no longer filter out perl
	core module requirements. The perl package now gives us a
	provides list of included core modules.
	(set_pkgrel): Adds new mutator.

2010-10-22  Justin Davis  <juster@cpan.org>

	* lib/CPANPLUS/Dist/Arch.pm (_prepare_arch): Search for XS files
	in the CPAN package dir and set the PKGBUILD arch field to 'i686'
	'x86_64' if we find we are building an XS module. This changes
	the 'arch' field for templates. Do not enclose the 'arch'
	value in quotes! The value of the 'arch' template variable now
	comes enclosed in single-quotes.

2010-10-21  Justin Davis  <juster@cpan.org>

	* lib/CPANPLUS/Dist/Arch.pm (get_pkgbuild): Fix bug where quoted
	bash special characters were padded with spaces.
	(get_pkgbuild): Remove exclaimation point (!) quoting for bash's
	sake, this wasn't necessary and looks funny.

2010-09-29  Justin Davis  <juster@cpan.org>

	* RELEASE (1.06)

	* ChangeLog: Fix whitespace funkiness in 2010-09-24.

	* lib/CPANPLUS/Dist/Arch.pm: Remove erronous 'XML::LibXML' to
	'libxml-perl' name mapping. There is a dist named libxml-perl so
	it doesn't need a mapping to it. Oops!  Reported by IsaacG

2010-09-24  Justin Davis  <juster@cpan.org>

	* lib/CPANPLUS/Dist/Arch.pm: Change PKGBUILD template to use the
	absolute path to the system perl interpreter.
	(install): Add --noconfirm flag to pacman arguments.

2010-08-07  Justin Davis  <juster@cpan.org>

	* lib/CPANPLUS/Dist/Arch.pm: Update name overrides to match
	changed ArchLinux perl package names in official repos.

2010-06-02  Justin Davis  <juster@cpan.org>

	* t/05-custom_template.t: Fix bug where the packager was
	hard-coded in our test output.
	Reported by IsaacG
