@@ -16,7 +16,7 @@ name: CPANPLUS-Dist-Arch
 provides:
   CPANPLUS::Dist::Arch:
     file: lib/CPANPLUS/Dist/Arch.pm
-    version: 1.07
+    version: 1.08
 requires:
   Archive::Tar: 0
   CPANPLUS: 0
@@ -40,4 +40,4 @@ requires:
   version: 0
 resources:
   repository: http://github.com/juster/perl-cpanplus-dist-arch
-version: 1.07
+version: 1.08
